--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -3,7 +3,7 @@
     padding-bottom: 10px;
     margin-left: 5px;
     margin-bottom: 20px;
-    background-color: #dcdddd;
+    background-color: #e9e9e9;
     margin-top: 5px;
     border-radius: 20px  5px 20px 20px;
 }
@@ -17,17 +17,15 @@
 }
 
 
-.informacoes {
-    margin-top: 0;
-    background-color: #93909b;
-    color: aliceblue;
+.texto {
+    margin-top: -10%;
+    margin-left: 15%;
+    background-color: #a6a5a7;
+    color: rgb(39, 38, 38);
     border-radius: 5px  10px 55px 10px;
     margin-bottom: 15px;
 }
 
-.informacoes h2 {
-    margin-left: 5%;    
-}
 
 .foto {
     background-color: whitesmoke;
