--- a/src/componentes/estilos/Publicar.css
+++ b/src/componentes/estilos/Publicar.css
@@ -70,3 +70,14 @@ form button {
     font-size: 13px;
     font-family: 'Varela Round', sans-serif;
 }
+
+.image {
+    display: flex;
+    background-color: whitesmoke;
+	border: 1px solid black;
+	height: 320px;
+	width: 350px;	margin-left: 70%;
+    margin-top: -5%;
+	border-radius: 5px  10px 5px 10px;	
+	box-shadow: 2px 3px 10px black;    
+}
