ajustes layout Artigo e detalhe artigo

--- a/src/componentes/estilos/Detal.css
+++ b/src/componentes/estilos/Detal.css
@@ -24,6 +24,15 @@
     padding: 1%;
 }
 
+.textoDetalhe {
+    margin-top: -20%;
+    margin-left: 50%;
+    width: 40%;
+    background-color: #a6a5a7;
+    color: rgb(39, 38, 38);
+    border-radius: 5px  10px 55px 10px;
+    margin-bottom: 15px;
+}
 
 .informacoes {
     margin-top: 0;
