alteracao estilo cad artigo

--- a/src/componentes/estilos/Publicar.css
+++ b/src/componentes/estilos/Publicar.css
@@ -13,7 +13,7 @@
     display: block;
     height: 95%;
     width: 90%;    
-    background-color: #B1B1B1;
+    background-color: #949191;
     border: 3px solida white;
     margin-top: 2%;    
     margin-left: 5%;
