--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -18,9 +18,8 @@
 
 
 .texto {
-    z-index: +1;
     margin-top: -10%;
-    margin-left: 15%;
+    margin-left: 175px;
     background-color: #a6a5a7;
     color: rgb(39, 38, 38);
     border-radius: 5px  10px 55px 10px;
