--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -18,7 +18,7 @@
 
 
 .texto {
-    margin-top: -10%;
+    margin-top: -120px;
     margin-left: 175px;
     background-color: #a6a5a7;
     color: rgb(39, 38, 38);
