--- a/src/componentes/estilos/Perfil.css
+++ b/src/componentes/estilos/Perfil.css
@@ -17,7 +17,7 @@
 .informacoes {
     margin-top: 0;
     background-color: #93909b;
-    color: aliceblue;
+    color: #2d2e2f;
     border-radius: 5px  10px 55px 10px;
     margin-bottom: 15px;
 }
