estilo cor da fonte detalhe

--- a/src/componentes/estilos/Detal.css
+++ b/src/componentes/estilos/Detal.css
@@ -50,7 +50,7 @@
 .informacoes {
     margin-top: 0;
     background-color: #f1eff7;
-    color: aliceblue;
+    color: rgb(28, 28, 29);
     border-radius: 5px  10px 25px 10px;
     margin-bottom: 15px;
 }
