--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -2,7 +2,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     margin-left: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 90px;
     background-color: #e9e9e9;
     margin-top: 5px;
     border-radius: 20px  5px 20px 20px;
@@ -18,9 +18,8 @@
 
 
 .texto {
-    margin-top: -120px;
-    margin-left: 175px;
-    background-color: #a6a5a7;
+    margin-left: 15px;
+    background-color: #b9d1dd;
     color: rgb(39, 38, 38);
     border-radius: 5px  10px 55px 10px;
     margin-bottom: 15px;
@@ -28,10 +27,13 @@
 
 
 .foto {
+    display: flex;
+    margin-left: 1%;
+    margin-right: auto;
     background-color: whitesmoke;
 	border: 1px solid black;
 	height: 120px;
-	width: 150px;	margin: 10px;
+	width: 50%;
 	border-radius: 5px  10px 5px 10px;	
 	box-shadow: 2px 3px 10px black;    
 }
