--- a/src/componentes/estilos/Detal.css
+++ b/src/componentes/estilos/Detal.css
@@ -34,7 +34,7 @@
     color: rgb(39, 38, 38);
     border-radius: 5px  10px 5px 10px;
     padding-right: 5px;
-    margin-bottom: 120px;
+    margin-bottom: 50px;
 }
 
 .textoDetalhe img {
@@ -51,6 +51,7 @@
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
     background-color: #f1eff7;
     color: rgb(28, 28, 29);
     border-radius: 5px  10px 25px 10px;
