--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -37,3 +37,18 @@
 	border-radius: 5px  10px 5px 10px;	
 	box-shadow: 2px 3px 10px black;    
 }
+
+.card {
+    display: flex;
+    background-color: rgb(220, 229, 231);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+    max-width: 20rem;
+    max-height: 10%;
+    transition: 0.3s;
+    padding: 1%;
+    padding-left: 2%;
+    border-radius: 5px;
+    margin-left: 70%;
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif;
+}
