--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -42,7 +42,7 @@
     display: flex;
     background-color: rgb(220, 229, 231);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
-    max-width: 20rem;
+    max-width: 40em;
     max-height: 10%;
     transition: 0.3s;
     padding: 1%;
