--- a/src/componentes/estilos/Login.css
+++ b/src/componentes/estilos/Login.css
@@ -12,7 +12,7 @@
     margin-right: 5%;
     border-radius: 5px;
 }
-input[type=text], input[type=password] {
+.login input[type=text], input[type=password] {
     width: 80%;
     margin-left: 15%;    
     display: grid;
