ajustes cadastro login

--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -38,7 +38,7 @@
 	box-shadow: 2px 3px 10px black;    
 }
 
-.card {
+.lista-artigo .card {
     display: flex;
     background-color: rgb(220, 229, 231);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
