--- a/src/componentes/estilos/CadastroLogin.css
+++ b/src/componentes/estilos/CadastroLogin.css
@@ -61,3 +61,32 @@ form button {
     display: right;
     text-align: center;
 }
+
+.cad-login {
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+    transition: 0.3s;
+    padding: 1%;
+    padding-left: 5%;
+    border-radius: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif;
+}
+
+.cad-login .card {
+    display: block;
+    background-color: rgb(243, 247, 250);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+    min-height: 95%;
+    min-width: 55%;
+    transition: 0.3s;
+    padding: 1%;
+    border-radius: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 13px;
+    font-family: 'Varela Round', sans-serif;
+}
