--- a/src/componentes/estilos/Publicar.css
+++ b/src/componentes/estilos/Publicar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     max-width: 90%;
-    background-color: #576988;
+    background-color: #a0aec6;
     margin-left: auto;
     margin-right: auto;
     margin-top: 1%;
