ajuste layout editar perfil

--- a/src/componentes/estilos/EditarPerfil.css
+++ b/src/componentes/estilos/EditarPerfil.css
@@ -25,6 +25,7 @@
     border-radius: 5px  10px 5px 10px;
     margin-bottom: 15px;
     background-color: #eef6fb;
+    margin-top: 10px;
 }
 
 .informacoes h2 {
