--- a/src/componentes/estilos/Perfil.css
+++ b/src/componentes/estilos/Perfil.css
@@ -4,6 +4,8 @@
     margin-top: 5%;
     max-width: 90%;
     border-radius: 20px  5px 20px 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .cabecalho {    
     display: inline-flex;
