--- a/src/componentes/estilos/Login.css
+++ b/src/componentes/estilos/Login.css
@@ -32,6 +32,12 @@
 }
 
 img {    
+    width: 100%;
+    height: 100%;
+    padding: 5px 5px 5px 5px;
+}
+
+.login img {    
     width: 8ch;
     height: 8ch;
     margin-top: 1%;
