ajuste para participanteem janela modal

--- a/src/componentes/estilos/Artigo.css
+++ b/src/componentes/estilos/Artigo.css
@@ -55,14 +55,17 @@
 .lista-artigo-flags {
     background-color: rgb(215, 224, 225);
     box-shadow: 0 1px 1px 0 rgba(59, 65, 71, 0.5);
-    padding-left: 10px;
-    
+    padding-left: 10px;   
     border-radius: 5px;
     width: 95%;
     font-family: 'Varela Round', sans-serif;
     margin-top: 15px;
 }
 
+.lista-artigo-flags button {
+    margin-left: 20px;   
+
+}
 
 .texto-card-cod {
     padding-left: 5%;
